--- a/Frontend/src/styles/CurrencyRates.css
+++ b/Frontend/src/styles/CurrencyRates.css
@@ -21,7 +21,7 @@
 }
 .currency-rates-header-title {
     border-right: 1px solid var(--border--color);
-    padding: 0px 35px;
+    padding: 0px 15px;
     height: 100%;
     display: flex;
     align-items: center;
@@ -34,11 +34,14 @@
 
 .currency-rates-header-actions{
     display: flex;
-    gap: 16px;
+    gap: 15px;
+    justify-content: center;
     border-left: 1px solid var(--border--color);
     height: 100%;
-    padding: 0px 35px;
+    padding: 0px 15px;
     align-items: center;
+    min-width: 244px;
+    box-sizing: border-box;
 }
 
 .currency-rates-table-container {
@@ -112,7 +115,7 @@
 
 .currency-rates-table td.currency-rates-editable-cell {
   position: relative;
-  padding: 0 !important;    /* инпут занимает всю площадь ячейки */
+  padding: 0 !important;  
 }
 
 
@@ -120,16 +123,15 @@
 
 .currency-rates-table td.currency-rates-editable-cell .currency-rates-editable-input {
   position: absolute;
-  inset: 0;                 /* top/right/bottom/left = 0 */
+  inset: 0;                 
   width: 100%;
   height: 100%;
-  border: none;             /* границы у ячейки */
-  padding: 0;               /* если нужен воздух: 6px 0 */
+  border: none;             
+  padding: 0;               
   background: var(--input-bg);
   color: var(--text-color);
-  border: 1px solid var(--input-border);
   text-align: center;
-  font: inherit;            /* унаследовать семейство и размер шрифта */
+  font: inherit;            
   box-sizing: border-box;
   transition: border-color 0.2s, box-shadow 0.2s;
   font-size: 15px;
@@ -137,8 +139,6 @@
 
 .currency-rates-editable-input:focus {
     outline: none;
-    border-color: var(--input-border-focus);
-    box-shadow: 0 0 0 2px rgba(51, 157, 199, 0.3);
 }
 
 
