--- a/Frontend/src/styles/ViewEditTransactionModal.css
+++ b/Frontend/src/styles/ViewEditTransactionModal.css
@@ -14,7 +14,7 @@
 .add-transaction-modal {
     background-color: var(--bg-menu-color);
     border-radius: 8px 0 0 8px;
-    padding: 20px 30px;
+    padding: 20px 0 20px 30px;
     width: 35%;
     min-width: 320px;
     max-width: 750px;
@@ -68,7 +68,7 @@
     flex-direction: column;
     flex-grow: 1;
     overflow-y: auto;
-    padding-right: 10px;
+    padding-right: 15px;
     padding-bottom: 20px;
 }
 
@@ -111,9 +111,7 @@
     flex-basis: 70%;
     width: 100%;
     padding: 10px 12px;
-    background-color: var(--bg-color);
-    border: 1px solid var(--border--color);
-    border-radius: 6px;
+    border-bottom: 1px solid var(--border--color);
     color: var(--text-color);
     font-size: 15px;
     outline: none;
