--- a/Frontend/src/styles/AddExecutorModal.css
+++ b/Frontend/src/styles/AddExecutorModal.css
@@ -206,7 +206,7 @@
     top: 100%;
     right: 0;
     background-color: var(--bg-menu-color);
-    border: 1px solid var(--border--color);
+    border: 1px solid var(--border-form-color);
     border-radius: 6px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     display: flex;
