--- a/Frontend/src/styles/AssetsPage.css
+++ b/Frontend/src/styles/AssetsPage.css
@@ -43,7 +43,7 @@
     transition: background-color 0.2s ease;
     display: flex;
     align-items: center;
-    gap: 8px;
+    gap: 15px;
     margin-left: auto;
     padding: 0 15px 0 15px;
     border-left: 1px solid var(--border--color);
@@ -155,7 +155,7 @@
     border-top: none;
     padding-top: 5px;
     padding-bottom: 5px;
-    font-weight: normal;
+    font-weight: 600;
     vertical-align: top;
 }
 
@@ -275,7 +275,7 @@
     background-color: transparent;
     border: none;
     padding: 8px 12px;
-    border-radius: 0;
+    border-radius: 6px;
     cursor: pointer;
     font-size: 1.2em;
     color: var(--chips-color);
@@ -295,7 +295,6 @@
 .assets-view-mode-button.active {
     background-color: #478cff;
     color: white;
-    border-radius: 6px;
 }
 
 .assets-view-mode-button:first-child.active {
