--- a/Frontend/src/styles/EmployeeModal.css
+++ b/Frontend/src/styles/EmployeeModal.css
@@ -46,7 +46,6 @@
   flex: 0 0 700px; 
   display: flex;
   flex-direction: column;
-  background-color: #2a2a3e; 
   border-right: 1px solid #444; 
 }
 
@@ -74,21 +73,20 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  color: #888;
-  background-color: #1e1e2d; 
   text-align: center;
   padding: 20px;
+  background-color: #2E3440;
   height: 100%;
 }
 .employee-modal-body {
   flex-grow: 1;
   overflow-y: auto;
+  background-color: #19213A;
 }
 .modal-body {
   flex-grow: 1;
   overflow-y: auto;
   padding: 24px;
-  background-color: #19213A;
 }
 
 .tab-section {
@@ -211,7 +209,7 @@
 .payment-log-header,
 .payment-log-row {
   display: grid;
-  grid-template-columns: 1.5fr 1.2fr 1.2fr 1fr 1fr 1fr; /* Пропорции для 6 колонок */
+  grid-template-columns: 1.5fr 1.2fr 1.2fr 1fr 1fr 1fr; 
   gap: 10px;
   padding: 8px 10px;
 }
@@ -230,13 +228,24 @@
   box-sizing: border-box;
 }
 
-/* Цвета для текста в зависимости от операции */
+
 .text-success {
-  color: #27ae60; /* Зеленый */
+  color: #27ae60; 
   font-weight: bold;
 }
 
 .text-danger {
-  color: #c0392b; /* Красный */
+  color: #c0392b; 
   font-weight: bold;
+}
+
+.employee-modal-actions{
+  display: flex;
+  justify-content: flex-end;
+  gap: 10px;
+  margin-top: auto;
+  padding: 20px 20px;
+  border-top: 1px solid var(--border-form-color);
+  flex-shrink: 0; 
+  background-color: #19213A;
 }
