--- a/Frontend/src/styles/AssetDetailsModal.css
+++ b/Frontend/src/styles/AssetDetailsModal.css
@@ -29,10 +29,12 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 20px;
+    margin-right: 39px;
+    margin-left: 30px;
     padding-bottom: 15px;
-    border-bottom: 1px solid var(--border--color);
-    padding-left: 30px;   /* <-- ДОБАВЬ ЭТУ СТРОКУ */
-    padding-right: 30px;  /* <-- ДОБАВЬ ЭТУ СТРОКУ */
+    border-bottom: 1px solid var(--border-form-color);
+    padding-left: 30px;   
+    padding-right: 30px;  
     padding-top: 20px;
 }
 
@@ -107,7 +109,7 @@
     margin-top: 15px;
     margin-bottom: 10px;
     padding-bottom: 5px;
-    border-bottom: 1px solid var(--border--color);
+    border-bottom: 1px solid var(--border-form-color);
 }
 
 .modal-body1 > .modal-section:first-child h3 {
@@ -200,7 +202,7 @@
 
 .payment-system-display {
     background-color: rgba(25, 33, 58, 0.2);
-    border: 1px solid var(--border--color);
+    border: 1px solid var(--border-form-color);
     border-radius: 4px;
     padding: 10px 15px;
     margin-top: 10px;
@@ -216,9 +218,11 @@
     display: flex;
     justify-content: flex-end;
     padding: 15px 30px;
-    border-top: 1px solid var(--border--color);
+    border-top: 1px solid var(--border-form-color);
     gap: 10px;
     margin-top: auto;
+    margin-right: 39px;
+    margin-left: 30px;
 }
 
 .modal-cancel-button,
@@ -501,7 +505,7 @@
     align-items: center;
     margin-top: 15px;
     margin-bottom: 10px;
-    border-bottom: 1px solid var(--border--color);
+    border-bottom: 1px solid var(--border-form-color);
     padding-bottom: 8px;
 }
 
